kubernetes/Kind/nginx-ingress.yaml
# Install ingress controller 
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watchwave-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - "nginx.abd0hrz.in"
    secretName: tls-secret
  rules:
  - host: "nginx.abd0hrz.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watchwave-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - "streamify.abd0hrz.in"
      - "wwapi.abd0hrz.in"
    secretName: tls-secret
  rules:
  - host: "streamify.abd0hrz.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: "wwapi.abd0hrz.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 8000

# if using kind cluster label the nodes for ingress scheduling 
# kubectl label nodes kind-worker ingress-ready=true
